--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -190,6 +190,11 @@
                 android:text="@string/relaccount" />
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dip"
+            android:background="#E8E8E8" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
