--- a/app/src/main/res/layout/activity_phone_num_change.xml
+++ b/app/src/main/res/layout/activity_phone_num_change.xml
@@ -11,6 +11,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip"
         android:background="@color/white">
 
         <EditText
