--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -51,8 +51,8 @@
                 android:textColor="#9b9b9b" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dip"
+                android:layout_height="25dip"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:src="@drawable/myright" />
@@ -75,8 +75,8 @@
 
             <ImageView
                 android:id="@+id/iv_my_money_pic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="28dip"
+                android:layout_height="28dip"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="21dip"
                 android:layout_marginTop="25dip"
@@ -97,7 +97,8 @@
                 android:layout_marginTop="18dip"
                 android:layout_toRightOf="@+id/tv_show_my_money"
                 android:text="元"
-                android:textSize="14dip" />
+                android:textSize="14dip"
+                android:id="@+id/textView3" />
 
             <View
                 android:id="@+id/v_vertical_divider"
@@ -108,8 +109,8 @@
 
             <ImageView
                 android:id="@+id/iv_my_sign"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
                 android:layout_marginBottom="21dip"
                 android:layout_marginLeft="25dip"
                 android:layout_marginTop="25dip"
@@ -139,15 +140,16 @@
                 android:layout_marginLeft="9dip"
                 android:layout_marginTop="7dip"
                 android:layout_toRightOf="@+id/iv_my_sign"
-                android:text="@string/sign_record" />
+                android:text="@string/sign_record"
+                android:id="@+id/textView4" />
 
             <TextView
                 style="@style/tv_personal_info_item_left_text"
                 android:text="@string/growup_comeon"
-                android:layout_centerVertical="true"
+                android:id="@+id/textView"
+                android:layout_alignTop="@+id/textView4"
                 android:layout_toRightOf="@+id/iv_my_money_pic"
-                android:layout_toEndOf="@+id/iv_my_money_pic"
-                android:id="@+id/textView" />
+                android:layout_toEndOf="@+id/iv_my_money_pic" />
         </RelativeLayout>
 
         <View
@@ -173,7 +175,7 @@
             android:layout_height="2dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="3dip"
+            android:layout_marginTop="15dip"
             android:background="#E8E8E8" />
 
         <RelativeLayout
@@ -211,7 +213,7 @@
             android:layout_height="2dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="3dip"
+            android:layout_marginTop="15dip"
             android:background="#E8E8E8" />
 
         <RelativeLayout
@@ -231,7 +233,7 @@
             android:layout_height="2dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="3dip"
+            android:layout_marginTop="15dip"
             android:background="#E8E8E8" />
 
         <RelativeLayout
@@ -251,7 +253,7 @@
             android:layout_height="2dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="3dip"
+            android:layout_marginTop="15dip"
             android:background="#E8E8E8" />
 
         <RelativeLayout
@@ -289,7 +291,7 @@
             android:layout_height="2dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="3dip"
+            android:layout_marginTop="15dip"
             android:background="#E8E8E8" />
     </LinearLayout>
 
