--- a/app/src/main/res/layout/fragment_growup.xml
+++ b/app/src/main/res/layout/fragment_growup.xml
@@ -65,31 +65,44 @@
             android:layout_height="44dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
-            android:layout_marginTop="10dip">
+            android:layout_marginTop="10dip"
+            android:background="@drawable/growup_search">
+
+            <ImageView
+                android:id="@+id/iv_search_show"
+                android:layout_width="18dip"
+                android:layout_height="18dip"
+                android:layout_marginLeft="5dip"
+                android:src="@drawable/search_logo"
+                android:visibility="gone"
+                android:layout_centerVertical="true"/>
 
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-               android:layout_marginLeft="5dip"
-                android:background="@drawable/growup_search" />
+                android:layout_toRightOf="@+id/iv_search_show"
+                android:layout_marginLeft="5dip"
+                android:background="@null" />
 
             <LinearLayout
                 android:id="@+id/layout_search_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_centerInParent="true">
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="18dip"
                     android:layout_height="18dip"
                     android:src="@drawable/search_logo" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:text="搜索"
-                    android:textColor="@color/textColorLight"/>
+                    android:textColor="@color/textColorLight" />
             </LinearLayout>
         </RelativeLayout>
 
