--- a/app/src/main/res/layout/item_picture_person.xml
+++ b/app/src/main/res/layout/item_picture_person.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/iv_show_uploading"
+        android:numColumns="3"
         android:layout_marginTop="15dip">
 
     </com.yijiehl.club.android.ui.view.NoScrollGridView>
