--- a/app/src/main/res/layout/fragment_growup.xml
+++ b/app/src/main/res/layout/fragment_growup.xml
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
-                    android:text="搜索"
+                    android:text="@string/search"
                     android:textColor="@color/textColorLight" />
             </LinearLayout>
         </RelativeLayout>
