--- a/app/src/main/res/layout/item_growup.xml
+++ b/app/src/main/res/layout/item_growup.xml
@@ -26,6 +26,8 @@
         android:id="@+id/tv_item_content"
         android:layout_width="match_parent"
         android:layout_height="42dip"
+        android:lines="2"
+        android:ellipsize="end"
         android:layout_below="@+id/tv_item_title"
         android:layout_toRightOf="@+id/iv_item_pic"
         android:layout_marginLeft="14dip"
