--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="50dip"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shouye_bg1"
             android:layout_weight="1">
             <!-- 外层半透明背景 -->
             <LinearLayout
