--- a/app/src/main/res/layout/fragment_growup.xml
+++ b/app/src/main/res/layout/fragment_growup.xml
@@ -118,7 +118,8 @@
             android:layout_height="match_parent"
             android:background="@drawable/bg_item_white_touchable"
             android:clickable="true"
-            android:divider="@null"
+            android:divider="#e1e1e1"
+            android:dividerHeight="1dip"
             android:fadingEdge="none"
             android:focusable="true"
             android:listSelector="@drawable/bg_item_white_touchable"
