--- a/app/src/main/res/layout/activity_add_relatives_account.xml
+++ b/app/src/main/res/layout/activity_add_relatives_account.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginTop="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +23,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="关系"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <EditText
@@ -38,7 +38,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -52,7 +52,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="姓名"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <EditText
@@ -68,7 +67,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -82,7 +81,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="手机"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <EditText
@@ -98,5 +96,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />
 </LinearLayout>
