--- a/app/src/main/res/layout/activity_address_change.xml
+++ b/app/src/main/res/layout/activity_address_change.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
-    <View
+    <!--<View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginTop="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dip"
+        android:layout_marginTop="10dip"
         android:background="@color/white">
 
         <TextView
@@ -22,7 +24,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="详细地址"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <EditText
@@ -37,8 +38,8 @@
             android:hint="@string/address_change_hint" />
     </RelativeLayout>
 
-    <View
+   <!-- <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 </LinearLayout>
