--- a/app/src/main/res/layout/activity_nickname_change.xml
+++ b/app/src/main/res/layout/activity_nickname_change.xml
@@ -2,18 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
-    <View
+  <!--  <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginTop="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
+        android:layout_height="50dip"
+        android:layout_marginTop="10dip"
         android:layout_marginBottom="5dip"
         android:background="@color/white">
 
@@ -38,8 +39,8 @@
             android:src="@mipmap/ic_launcher" />
     </RelativeLayout>
 
-    <View
+   <!-- <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="#eeeeee" />-->
 </LinearLayout>
