--- a/app/src/main/res/layout/activity_phone_num_change.xml
+++ b/app/src/main/res/layout/activity_phone_num_change.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <View
+    android:layout_height="match_parent"
+    android:background="#eeeeee">
+    <!--<View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginTop="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
+        android:layout_height="50dip"
+        android:layout_marginTop="10dip"
         android:layout_marginBottom="5dip"
         android:background="@color/white">
 
@@ -35,8 +36,8 @@
             android:src="@mipmap/ic_launcher" />
     </RelativeLayout>
 
-    <View
+    <!--<View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 </LinearLayout>
