--- a/app/src/main/res/layout/activity_sex_change.xml
+++ b/app/src/main/res/layout/activity_sex_change.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
-    <View
+    <!--<View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginTop="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 
     <RelativeLayout
         android:id="@+id/layout_choose_male"
         android:layout_width="match_parent"
         android:layout_height="50dip"
+        android:layout_marginTop="10dip"
         android:background="@color/white">
 
         <TextView
@@ -23,7 +25,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="男"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <ImageView
@@ -31,15 +32,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:visibility="gone"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dip"
+        android:layout_height="1dip"
         android:layout_marginLeft="18dip"
-        android:background="@color/colorPrimary" />
+        android:background="#e1e1e1" />
 
     <RelativeLayout
         android:id="@+id/layout_choose_female"
@@ -54,7 +55,6 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dip"
             android:text="女"
-            android:textColor="@color/black"
             android:textSize="23dip" />
 
         <ImageView
@@ -62,11 +62,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:visibility="gone"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:visibility="gone" />
     </RelativeLayout>
-    <View
+    <!--<View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary" />-->
 </LinearLayout>
