--- a/app/src/main/res/layout/activity_sex_change.xml
+++ b/app/src/main/res/layout/activity_sex_change.xml
@@ -29,11 +29,13 @@
 
         <ImageView
             android:id="@+id/iv_male_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dip"
+            android:layout_height="25dip"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"
-            android:visibility="gone" />
+            android:layout_centerVertical="true"
+            android:src="@drawable/sex_choose"
+            android:layout_marginRight="7dip"
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <View
@@ -59,10 +61,12 @@
 
         <ImageView
             android:id="@+id/iv_female_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dip"
+            android:layout_height="25dip"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_launcher"
+            android:layout_centerVertical="true"
+            android:src="@drawable/sex_choose"
+            android:layout_marginRight="7dip"
             android:visibility="gone" />
     </RelativeLayout>
     <!--<View
